# TurkishMorphologicalAnalysis-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: DisambiguationCorpusTest.c  FiniteStateMachineTest.c  FsmMorphologicalAnalyzerTest.c  FsmParseListTest.c  FsmParseTest.c  InflectionalGroupTest.c  MorphologicalParseTest.c  TransitionTest.c
src/: CMakeLists.txt  DisambiguatedWord.c  DisambiguatedWord.h  DisambiguationCorpus.c  DisambiguationCorpus.h  FiniteStateMachine.c  FiniteStateMachine.h  FsmMorphologicalAnalyzer.c  FsmMorphologicalAnalyzer.h  FsmParse.c  FsmParse.h  FsmParseList.c  FsmParseList.h  FsmState.c  FsmState.h  InflectionalGroup.c  InflectionalGroup.h  MetamorphicParse.c  MetamorphicParse.h  MorphologicalParse.c  MorphologicalParse.h  MorphologicalTag.h  MorphotacticEngine.c  MorphotacticEngine.h  Transition.c  Transition.h
