cmake_minimum_required(VERSION 3.23)
project(MorphologicalAnalysis C)

set(CMAKE_C_STANDARD 17)

include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()

add_library(MorphologicalAnalysis src/MorphologicalTag.h src/FsmState.c src/FsmState.h src/InflectionalGroup.c src/InflectionalGroup.h src/MetamorphicParse.c src/MetamorphicParse.h src/MorphologicalParse.c src/MorphologicalParse.h src/DisambiguatedWord.c src/DisambiguatedWord.h src/DisambiguationCorpus.c src/DisambiguationCorpus.h src/FiniteStateMachine.c src/FiniteStateMachine.h src/MorphotacticEngine.c src/MorphotacticEngine.h src/Transition.c src/Transition.h src/FsmParse.c src/FsmParse.h src/FsmParseList.c src/FsmParseList.h src/FsmMorphologicalAnalyzer.c src/FsmMorphologicalAnalyzer.h)
target_link_libraries(MorphologicalAnalysis ${CONAN_LIBS})
add_executable(InflectionalGroupTest src/MorphologicalTag.h src/FsmState.c src/FsmState.h src/InflectionalGroup.c src/InflectionalGroup.h Test/InflectionalGroupTest.c)
target_link_libraries(InflectionalGroupTest ${CONAN_LIBS})
add_executable(MorphologicalParseTest src/MorphologicalTag.h src/FsmState.c src/FsmState.h src/InflectionalGroup.c src/InflectionalGroup.h src/MetamorphicParse.c src/MetamorphicParse.h src/MorphologicalParse.c src/MorphologicalParse.h Test/MorphologicalParseTest.c)
target_link_libraries(MorphologicalParseTest ${CONAN_LIBS})
add_executable(DisambiguationCorpusTest src/MorphologicalTag.h src/FsmState.c src/FsmState.h src/InflectionalGroup.c src/InflectionalGroup.h src/MetamorphicParse.c src/MetamorphicParse.h src/MorphologicalParse.c src/MorphologicalParse.h src/DisambiguatedWord.c src/DisambiguatedWord.h src/DisambiguationCorpus.c src/DisambiguationCorpus.h Test/DisambiguationCorpusTest.c)
target_link_libraries(DisambiguationCorpusTest ${CONAN_LIBS})
add_executable(FiniteStateMachineTest src/MorphologicalTag.h src/FsmState.c src/FsmState.h src/InflectionalGroup.c src/InflectionalGroup.h src/MetamorphicParse.c src/MetamorphicParse.h src/MorphologicalParse.c src/MorphologicalParse.h src/DisambiguatedWord.c src/DisambiguatedWord.h src/DisambiguationCorpus.c src/DisambiguationCorpus.h src/FiniteStateMachine.c src/FiniteStateMachine.h src/MorphotacticEngine.c src/MorphotacticEngine.h src/Transition.c src/Transition.h Test/FiniteStateMachineTest.c)
target_link_libraries(FiniteStateMachineTest ${CONAN_LIBS})
add_executable(FsmParseTest src/MorphologicalTag.h src/FsmState.c src/FsmState.h src/InflectionalGroup.c src/InflectionalGroup.h src/MetamorphicParse.c src/MetamorphicParse.h src/MorphologicalParse.c src/MorphologicalParse.h src/DisambiguatedWord.c src/DisambiguatedWord.h src/DisambiguationCorpus.c src/DisambiguationCorpus.h src/FiniteStateMachine.c src/FiniteStateMachine.h src/MorphotacticEngine.c src/MorphotacticEngine.h src/Transition.c src/Transition.h src/FsmParse.c src/FsmParse.h src/FsmParseList.c src/FsmParseList.h src/FsmMorphologicalAnalyzer.c src/FsmMorphologicalAnalyzer.h Test/FsmParseTest.c)
target_link_libraries(FsmParseTest ${CONAN_LIBS})
add_executable(FsmParseListTest src/MorphologicalTag.h src/FsmState.c src/FsmState.h src/InflectionalGroup.c src/InflectionalGroup.h src/MetamorphicParse.c src/MetamorphicParse.h src/MorphologicalParse.c src/MorphologicalParse.h src/DisambiguatedWord.c src/DisambiguatedWord.h src/DisambiguationCorpus.c src/DisambiguationCorpus.h src/FiniteStateMachine.c src/FiniteStateMachine.h src/MorphotacticEngine.c src/MorphotacticEngine.h src/Transition.c src/Transition.h src/FsmParse.c src/FsmParse.h src/FsmParseList.c src/FsmParseList.h src/FsmMorphologicalAnalyzer.c src/FsmMorphologicalAnalyzer.h Test/FsmParseListTest.c)
target_link_libraries(FsmParseListTest ${CONAN_LIBS})
add_executable(TransitionTest src/MorphologicalTag.h src/FsmState.c src/FsmState.h src/InflectionalGroup.c src/InflectionalGroup.h src/MetamorphicParse.c src/MetamorphicParse.h src/MorphologicalParse.c src/MorphologicalParse.h src/DisambiguatedWord.c src/DisambiguatedWord.h src/DisambiguationCorpus.c src/DisambiguationCorpus.h src/FiniteStateMachine.c src/FiniteStateMachine.h src/MorphotacticEngine.c src/MorphotacticEngine.h src/Transition.c src/Transition.h src/FsmParse.c src/FsmParse.h src/FsmParseList.c src/FsmParseList.h src/FsmMorphologicalAnalyzer.c src/FsmMorphologicalAnalyzer.h Test/TransitionTest.c)
target_link_libraries(TransitionTest ${CONAN_LIBS})
add_executable(FsmMorphologicalAnalyzerTest src/MorphologicalTag.h src/FsmState.c src/FsmState.h src/InflectionalGroup.c src/InflectionalGroup.h src/MetamorphicParse.c src/MetamorphicParse.h src/MorphologicalParse.c src/MorphologicalParse.h src/DisambiguatedWord.c src/DisambiguatedWord.h src/DisambiguationCorpus.c src/DisambiguationCorpus.h src/FiniteStateMachine.c src/FiniteStateMachine.h src/MorphotacticEngine.c src/MorphotacticEngine.h src/Transition.c src/Transition.h src/FsmParse.c src/FsmParse.h src/FsmParseList.c src/FsmParseList.h src/FsmMorphologicalAnalyzer.c src/FsmMorphologicalAnalyzer.h Test/FsmMorphologicalAnalyzerTest.c)
target_link_libraries(FsmMorphologicalAnalyzerTest ${CONAN_LIBS})
